--- a/apps/argocd/application.yaml
+++ b/apps/argocd/application.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: sample-app
-  namespace: argocd
+  namespace: sample-app
 spec:
   project: default
   source:
