--- a/apps/argocd/application.yaml
+++ b/apps/argocd/application.yaml
@@ -11,7 +11,7 @@ spec:
     path: apps/sample-app
   destination:
     server: https://kubernetes.default.svc
-    namespace: default
+    namespace: sample-app
   syncPolicy:
     automated:
       prune: true
